data/derived/sp14/progs/unify/prog1212.ml.out
Characters 24-25:
  let _ = ([0;0]@[1;1])::[1];;
                          ^
Error: This expression has type int but an expression was expected of type
         int list
